--- a/artificial.html
+++ b/artificial.html
@@ -254,17 +254,19 @@
                         <div class="item">
                                 <h4 class="siz">Job Roles</h4>
                                 <ul class="ulpad">
-                                    <li>Machine learning engineer</li>
-                                    <li>Data scientist</li>
-                                    <li>Business intelligence developer </li>
+                                    <li>AI/ML Engineers</li>
+                                    <li>AI/ML Architect</li>
+                                    <li>AI/ML Developer </li>
+                                    <li>Researcher</li>
                                 </ul>
                             </div><br>
                             <div class="item">
                                     <h4 class="siz">Skills Required</h4>
                                     <ul class="ulpad">
                                         <li>Programming</li>
-                                        <li>Communication skills</li>
-                                        <li>Leadership skills</li>
+                                        <li>Probability and Statistics</li>
+                                        <li>Data Modelling & Evaluation</li>
+                                        <li>Machine Learning Algorithms</li>
                                     </ul>
                                 </div>
                     <!-- <div class="col-sm-4">
