--- a/certificate.html
+++ b/certificate.html
@@ -38,8 +38,8 @@
     <!--Header-->
     <header>
         <nav class="navbar navbar-default navbar-fixed white no-background bootsnav">
-             <!-- <div class="container"> -->
-        <div class="header">
+            <!-- <div class="container"> -->
+            <div class="header">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="#">
                         <img src="images/IBM_ICE.jpg" alt="Logo" style="width: 200px !important;"
@@ -176,14 +176,19 @@
                 <div class="col-md-12">
                     <h2 class="heading bottom25">IBM Global Certification Program<span class="divider-left"></span>
                     </h2>
-                    <p class="half_space text-justify">The IBM ICE program provides a framework that helps to simulate a
-                        real-life work environment of an IT organization on-campus. The ICE online platform provides the
-                        courseware content and labs access to the students, it also tracks students progress and
-                        connects to industry aligned projects and mentors. The IBM ICE program aims to contribute to the
-                        transformation to a knowledge society supporting the implementation of new educational models
-                        that will increase the alignment of student skills with the current/future regional market needs
-                        and IT industry trends. IBM will provide participation certificate on successful completion of
-                        the program and provides digital badges after successful completion of proacted assessment.
+                    <p class="half_space text-justify">IBM is highly quality oriented organization. All the courses run
+                        by IBM ICE is of Global standard and the curriculum, course materials will pass through a very
+                        high level of quality scrutiny at various levels to include all latest and relevant materials
+                        for training. The IBM Global Certification program ensures that the quality of the courseware,
+                        as well as the Trainers, would be very high by running a Trainer certification program for the
+                        trainers. Further, the student assessment is not just done by an examination method but by
+                        evaluation of the training hours spent both at the classroom as well as the online self-study on
+                        the portal; assignments and assessment test performance. The unique digital credential provided
+                        by IBM (recognized globally) for the students who have enrolled into the ICE program and satisfy
+                        the eligibility criteria to earn the badge. The students earn the Badges when they complete
+                        their iCAT specialization track after they pass the pro-acted assessment. With a Badge, the
+                        Student can display his skills over Social media and in the email profile, thus reaching out to
+                        a larger audience, whereas this is a major limitation with certificates.
                     </p>
                 </div>
             </div><br>
@@ -216,8 +221,8 @@
                         <img class="img-responsive" src="images/certificate/certificate_5.png" alt="certificate">
                     </div>
                     <div class="col-md-4">
-                            <img class="img-responsive" src="images/certificate/certificate_4.png" alt="certificate">
-                        </div>
+                        <img class="img-responsive" src="images/certificate/certificate_4.png" alt="certificate">
+                    </div>
                 </div>
             </div>
         </div>
