--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
     <div class="navbar-fixed-top main-menu-continer menutop">
       <button type="button" class="btn menubar-toggle styl" onmouseover="openNav()">
-        <!-- <i class="fa fa-bars"></i> -->Menu
+        <!-- <i class="fa fa-bars"></i>  onmouseout="closeNav()" -->Menu
       </button>
 
       <div id="mySidenav" class="sidenav">
@@ -208,11 +208,11 @@
             <li><i class="design fa fa-hand-o-right"></i>We live at the intersection of business and technology and
               today, we are a cognitive solutions and cloud platform company, transforming entire industries</li>
           </ul> -->
-          <p class="text-justify">IBM is a global technology and innovation company headquartered
-            in Armonk, NY. Started in 1911. A century of innovation - One of only 2 companies to remain in
-            the top 25 Industrial companies since 1900. In 2017, IBM’s Revenue was USD 79.1 billion revenue (Cloud- USD
-            17 Billion). We live at the intersection of business and technology and
-            today, we are a cognitive solutions and cloud platform company, transforming entire industries.</p>
+          <p class="text-justify">IBM is a global technology and innovation company headquartered in Armonk, NY. Started
+            in 1911. A century of innovation - One of only 2 companies to remain in the top 25 Industrial companies
+            since 1900. In 2017, IBM’s Revenue was USD 79.1 billion revenue (Cloud- USD 17 Billion). We live at the
+            intersection of business and technology and today, we are a cognitive solutions and cloud platform company,
+            transforming entire industries.</p>
 
         </div>
         <div class="col-md-6">
@@ -233,16 +233,16 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p class="text-justify margin10 half_space">The IBM Innovation Centre for Education
-            collaborates with universities to co-create degrees that let industry professionals and students interact
-            and prepare for solving the problems of tomorrow. IBM works with its partner ecosystem as well as thousands
-            of clients worldwide to understand the skills needed by working professionals in their organizations. The
-            IBM ICE initiative aims to leverage the proven academic excellence of the
-            existing university degree (i.e., developed scientific course content, attained academic accreditations,
-            student attraction, faculty retention and local community support) and augment the degree with specific
-            industry and/or technology specializations by bridging the gap between academia and industry.
-            Together, this will impart outstanding industry-grade skills to our young students and will help them
-            prepare for any challenges that the Smarter Planet will bring to them in their exciting careers ahead.
+          <p class="text-justify margin10 half_space">The IBM Innovation Centre for Education collaborates with
+            universities to co-create degrees that let industry professionals and students interact and prepare for
+            solving the problems of tomorrow. IBM works with its partner ecosystem as well as thousands of clients
+            worldwide to understand the skills needed by working professionals in their organizations. The IBM ICE
+            initiative aims to leverage the proven academic excellence of the existing university degree (i.e.,
+            developed scientific course content, attained academic accreditations, student attraction, faculty retention
+            and local community support) and augment the degree with specific industry and/or technology specializations
+            by bridging the gap between academia and industry. Together, this will impart outstanding industry-grade
+            skills to our young students and will help them prepare for any challenges that the Smarter Planet will
+            bring to them in their exciting careers ahead.
           </p>
         </div>
       </div>
@@ -257,24 +257,19 @@
           <h2 class="heading bottom25">About Additional Skill Aquisition Program<span class="divider-left"></span></h2>
           <p class="text-justify margin10 half_space">In the year 2012, the State Skill Development Project (SSDP) was
             enacted to address the concern of the growing educated-unemployment rates of the State. SSDP involves the
-            participation of
-            industries and training partners to execute the project ASAP (Additional Skill Acquisition Programme). ASAP,
-            under the General and Higher Education Departments, works on the preventive side by training Higher Graduate
-            students, offering skill courses to students in need of immediate employment. ASAP offers varied skill sets
-            to the undergraduate students through its foundation module and skill training program. ASAP has also
-            identified need to tie up with a well recognized organization, whose skill development methodologies, tools
-            and capabilities are proven. Whose certification is globally recognized.
-          </p>
-          <p class="text-justify">Since its inception, ASAP has been relentlessly ‘empowering’ the youth of Kerala
-            through globally-relevant ‘employable skills’ in several sectors. ASAP also proved its capabilities in
-            course framework development, courseware development, trainer development and quality assurance. In order to
-            strengthen its services to people and the industry, the idea of setting up Community Skill Parks has been
-            mooted under ASAP subsequently. Community Skill Parks are large state-of-the-art multi skill training
-            facilities that are being built across the state for providing higher order skill training to citizens with
-            a vision to better their livelihood along with making the state economy stronger. As a result, ASAP has
-            planned
-            to launch Community Skills Park(CSP) in collaboration with IBM India Pvt. Ltd. under the Kerala Government’s
-            Skill Development Initiative.</p>
+            participation of industries and training partners to execute the project ASAP (Additional Skill Acquisition
+            Program). ASAP, under the General and Higher Education Departments, works on the preventive side by training
+            Higher Graduate students, offering skill courses to students in need of immediate employment. ASAP offers
+            varied skill sets to the undergraduate students through its foundation module and skill training program.
+            Since its inception, ASAP has been relentlessly ‘empowering’ the youth of Kerala through globally relevant
+            ‘employable skills’ in several sectors. ASAP also proved its capabilities in course framework development,
+            courseware development, trainer development and quality assurance. In order to strengthen its services to
+            people and the industry, the idea of setting up Community Skill Parks has been mooted under ASAP
+            subsequently. Community Skill Parks are large state-of-the-art multi skill training facilities that are
+            being built across the state for providing higher order skill training to citizens with a vision to better
+            their livelihood along with making the state economy stronger. As a result, ASAP has planned to launch
+            Community Skills Park(CSP) in collaboration with IBM India Pvt. Ltd. under the Kerala Government’s Skill
+            Development Initiative.</p>
         </div>
       </div>
     </div>
@@ -287,26 +282,24 @@
         <div class="col-md-12 priorty">
           <h2 class="heading bottom25">IBM and ASAP Collaboration – CSP Kalamassery<span class="divider-left"></span>
           </h2>
-          <p class="text-justify margin10 half_space">In the year 2012, the State Skill Development Project (SSDP) was
-            enacted to address the concern of the growing educated-unemployment rates of the State. SSDP involves the
-            participation of
-            industries and training partners to execute the project ASAP (Additional Skill Acquisition Programme). ASAP,
-            under the General and Higher Education Departments, works on the preventive side by training Higher Graduate
-            students, offering skill courses to students in need of immediate employment. ASAP offers varied skill sets
-            to the undergraduate students through its foundation module and skill training program. ASAP has also
-            identified need to tie up with a well recognized organization, whose skill development methodologies, tools
-            and capabilities are proven. Whose certification is globally recognized.
+          <p class="text-justify margin10 half_space">AASAP has identified the need to tie up with a well-recognized
+            organization, whose skill development methodologies, tools and capabilities are proven, whose certification
+            is globally recognized. ASAP has opted IBM for operating the CSP at Kalamassery. IBM will deliver the IBM
+            Certification of Advanced Technologies (iCAT) program at CSP or at the allocated centers. IBM shall provide
+            the solution to meet the need of the students of CSP and its affiliated colleges by providing the Industry
+            oriented project driven software training certification program as per the curriculum of IBM iCAT identified
+            and selected tracks. The IBM iCAT program courses will imbibe a great combination of theoretical and
+            practical knowledge delivered to the participating students coupled with broad-based industry alignment,
+            interaction, talent discoverability, and excellence in their professional make-up. The new batches thus
+            trained and accredited will be ready for industry much better than their peers. This is a new vision which
+            is based on cutting-edge, industry-aligned courses, delivered through a new-age paradigm of delivery through
+            an ecosystem of the platform, methodology, and mechanisms. IBM would be delivering in two quadrants. The
+            quadrants selected are ICT (Industry Collaboration Training) and Precision Training quadrants. IBM has
+            identified technology areas such as Data Science, Business Analytics, Internet of Things (IOT), Cyber
+            Security, Blockchain and Artificial Intelligence & Machine Learning (AI/ML) which provide large employment
+            opportunities in the area.
           </p>
-          <p class="text-justify">Since its inception, ASAP has been relentlessly ‘empowering’ the youth of Kerala
-            through globally-relevant ‘employable skills’ in several sectors. ASAP also proved its capabilities in
-            course framework development, courseware development, trainer development and quality assurance. In order to
-            strengthen its services to people and the industry, the idea of setting up Community Skill Parks has been
-            mooted under ASAP subsequently. Community Skill Parks are large state-of-the-art multi skill training
-            facilities that are being built across the state for providing higher order skill training to citizens with
-            a vision to better their livelihood along with making the state economy stronger. As a result, ASAP has
-            planned
-            to launch Community Skills Park(CSP) in collaboration with IBM India Pvt. Ltd. under the Kerala Government’s
-            Skill Development Initiative.</p>
+
         </div>
       </div>
     </div>
